--- a/Exercises/11ty/package.json
+++ b/Exercises/11ty/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "concurrently": "^7.0.0",
+    "del": "^6.0.0",
     "nodemon": "^2.0.15",
     "sass": "^1.49.9"
   }
