--- a/Exercises/PGM Website/package.json
+++ b/Exercises/PGM Website/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-navigation": "^0.3.2",
     "concurrently": "^7.0.0",
     "del": "^6.0.0",
     "nodemon": "^2.0.15",
